--- a/app/src/main/res/layout/activity_character_selection.xml
+++ b/app/src/main/res/layout/activity_character_selection.xml
@@ -11,7 +11,7 @@
     <RelativeLayout
         android:id="@+id/RelativeLayoutHead"
         android:layout_width="match_parent"
-        android:layout_height="70dp">
+        android:layout_height="@dimen/_30sdp">
 
         <ImageView
             android:id="@+id/ImageViewBackgroundHead"
