--- a/app/src/main/res/layout/character_selection_view.xml
+++ b/app/src/main/res/layout/character_selection_view.xml
@@ -20,12 +20,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="15dp">
+                android:padding="@dimen/_5sdp">
 
                 <FrameLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginRight="15dp">
+                    android:layout_marginRight="@dimen/_5sdp">
 
                     <ImageView
                         android:id="@+id/imageViewAvatar"
@@ -33,8 +33,6 @@
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:adjustViewBounds="true"
-                        android:maxWidth="200dp"
-                        android:minWidth="200dp"
                         android:scaleType="fitCenter"
                         app:srcCompat="@drawable/avatar_dark_wizard" />
 
@@ -59,8 +57,8 @@
                             <TextView
                                 android:id="@+id/textViewLabelName"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginRight="15dp"
+                                android:layout_height="match_parent"
+                                android:layout_marginRight="@dimen/_5sdp"
                                 android:text="Name :"
                                 android:textColor="#642D04"
                                 android:textSize="@dimen/CharacterSelectionViewTextSize" />
@@ -78,13 +76,13 @@
                         <TableRow
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:layout_marginTop="10dp">
+                            android:layout_marginTop="@dimen/_3sdp">
 
                             <TextView
                                 android:id="@+id/textViewLabelRace"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginRight="15dp"
+                                android:layout_height="match_parent"
+                                android:layout_marginRight="@dimen/_5sdp"
                                 android:text="Race :"
                                 android:textColor="#642D04"
                                 android:textSize="@dimen/CharacterSelectionViewTextSize" />
@@ -106,8 +104,8 @@
                             <TextView
                                 android:id="@+id/textViewLabelClass"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginRight="15dp"
+                                android:layout_height="match_parent"
+                                android:layout_marginRight="@dimen/_5sdp"
                                 android:text="Class"
                                 android:textColor="#642D04"
                                 android:textSize="@dimen/CharacterSelectionViewTextSize" />
@@ -129,17 +127,17 @@
                             <TextView
                                 android:id="@+id/textViewLabelAlignement"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginRight="15dp"
+                                android:layout_height="match_parent"
+                                android:layout_marginRight="@dimen/_5sdp"
                                 android:text="Alignement :"
                                 android:textColor="#642D04"
                                 android:textSize="@dimen/CharacterSelectionViewTextSize" />
 
                             <TextView
                                 android:id="@+id/textViewAlignement"
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="TextView"
+                                android:text="TextView je suis un nom vachement long quand même"
                                 android:textColor="#642D04"
                                 android:textSize="@dimen/CharacterSelectionViewTextSize" />
 
@@ -148,13 +146,13 @@
                         <TableRow
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp">
+                            android:layout_marginTop="@dimen/_3sdp">
 
                             <TextView
                                 android:id="@+id/textViewLabelLevel"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginRight="15dp"
+                                android:layout_height="match_parent"
+                                android:layout_marginRight="@dimen/_5sdp"
                                 android:text="Level"
                                 android:textColor="#642D04"
                                 android:textSize="@dimen/CharacterSelectionViewTextSize" />
