--- a/app/src/main/res/layout/activity_character_selection.xml
+++ b/app/src/main/res/layout/activity_character_selection.xml
@@ -40,11 +40,13 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/_5sdp"
                 android:layout_weight="1"
+                android:fontFamily="@font/balthazar"
                 android:gravity="center_vertical"
                 android:shadowColor="#4D2F20"
                 android:shadowRadius="2"
                 android:text="Character selection"
                 android:textColor="#db3812"
+                android:textStyle="bold"
                 app:autoSizeTextType="uniform" />
 
         </LinearLayout>
@@ -96,7 +98,7 @@
                 <com.example.ddprojet.CustomComponent.CharacterSelectionView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:name="Je suis un nom vachement long quand même"/>
+                    app:name="Je suis un nom vachement long quand même et encore je pourrais être vachement plus long, genre vraiment vraiment plus long"/>
 
                 <com.example.ddprojet.CustomComponent.CharacterSelectionView
                     android:id="@+id/Chara2"
@@ -106,11 +108,21 @@
                     app:alignement="Good/Neutral"
                     app:level="500"
                     app:name="Heritage"
-                    app:race="Sword" />
+                    app:race="Sword"
+                    app:avatar="@drawable/background_wood"/>
 
                 <com.example.ddprojet.CustomComponent.CharacterSelectionView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    app:alignement="test"
+                    app:avatar="@drawable/background_scroll"/>
+
+                <com.example.ddprojet.CustomComponent.CharacterSelectionView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:avatar="@drawable/background_scroll"/>
+
+                <include layout="@layout/new_character_view"/>
 
             </LinearLayout>
         </ScrollView>
