--- a/app/src/main/res/layout/character_edition.xml
+++ b/app/src/main/res/layout/character_edition.xml
@@ -27,7 +27,7 @@
 
 
 
-        <FrameLayout
+        <androidx.viewpager.widget.ViewPager
             android:id="@+id/fragment_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
