--- a/app/src/main/res/layout/activity_character_selection.xml
+++ b/app/src/main/res/layout/activity_character_selection.xml
@@ -36,14 +36,16 @@
 
             <TextView
                 android:id="@+id/textViewActivityName"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/_5sdp"
+                android:layout_marginStart="@dimen/_5sdp"
                 android:layout_weight="1"
                 android:fontFamily="@font/balthazar"
                 android:gravity="center_vertical"
-                android:shadowColor="#4D2F20"
-                android:shadowRadius="2"
+                android:shadowColor="#503020"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="50"
                 android:text="Character selection"
                 android:textColor="#db3812"
                 android:textStyle="bold"
