--- a/app/src/main/res/layout/character_race_view.xml
+++ b/app/src/main/res/layout/character_race_view.xml
@@ -2,8 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="@dimen/_100sdp"
-    android:layout_height="@dimen/_100sdp">
+    android:layout_width="@dimen/_200sdp"
+    android:layout_height="@dimen/_200sdp">
 
 
     <RelativeLayout
@@ -22,28 +22,88 @@
             android:layout_height="match_parent"
             android:gravity="bottom|center_horizontal">
 
-            <androidx.cardview.widget.CardView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_3sdp"
-                android:layout_marginTop="@dimen/_3sdp"
-                android:layout_marginEnd="@dimen/_3sdp"
-                android:layout_marginBottom="@dimen/_3sdp"
-                app:cardBackgroundColor="#4FF3DCD7"
-                app:cardElevation="5dp"
-                app:cardMaxElevation="5dp">
+                android:orientation="vertical"
+                android:padding="@dimen/_3sdp">
 
-                <TextView
-                    android:id="@+id/textViewRace"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="bottom|center_horizontal"
-                    android:padding="@dimen/_2sdp"
-                    android:shadowColor="#3F0000"
-                    android:text="Race"
-                    android:textColor="#642D04"
-                    android:textSize="@dimen/_10sdp" />
-            </androidx.cardview.widget.CardView>
+                    android:gravity="bottom"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:srcCompat="@drawable/arrow_line" />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:scaleType="fitXY"
+                        app:srcCompat="@drawable/dot" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:srcCompat="@drawable/arrow_line_flip" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:cardBackgroundColor="#D0FFB087"
+                        app:cardElevation="5dp"
+                        app:cardMaxElevation="5dp">
+
+                        <TextView
+                            android:id="@+id/textViewRace"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="bottom|center_horizontal"
+                            android:padding="@dimen/_2sdp"
+                            android:shadowColor="#3F0000"
+                            android:text="Race"
+                            android:textColor="#642D04"
+                            android:textSize="@dimen/_20sdp" />
+                    </androidx.cardview.widget.CardView>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="top"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:rotation="180"
+                        app:srcCompat="@drawable/arrow_line_flip" />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:scaleType="fitXY"
+                        app:srcCompat="@drawable/dot" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:rotation="180"
+                        app:srcCompat="@drawable/arrow_line" />
+                </LinearLayout>
+            </LinearLayout>
+
         </RelativeLayout>
 
     </RelativeLayout>
