--- a/app/src/main/res/layout/race_layout.xml
+++ b/app/src/main/res/layout/race_layout.xml
@@ -25,8 +25,8 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/RaceRecyclerView"
-            android:layout_width="@dimen/_315sdp"
-            android:layout_height="@dimen/_560sdp" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 
