--- a/app/src/main/res/layout/activity_character_edition.xml
+++ b/app/src/main/res/layout/activity_character_edition.xml
@@ -27,7 +27,7 @@
 
 
 
-        <model.CustomViewPager
+        <util.CustomViewPager
             android:id="@+id/fragment_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
